--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,3 @@
-/*!
- * Start Bootstrap - SB Admin 2 Bootstrap Admin Theme (http://startbootstrap.com)
- * Code licensed under the Apache License v2.0.
- * For details, see http://www.apache.org/licenses/LICENSE-2.0.
- */
 body {
     background-color: #f8f8f8;
 }
@@ -685,6 +680,7 @@ table.dataTable thead .sorting:after {
 }
 .selection-col {
 	width: 40px;
+	text-align: center;
 }
 .statistics-area {
 	height: 300px;
