--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+html {
+	width:100%;
+	height:100%;
+}
 body {
     background-color: #f8f8f8;
 }
@@ -687,6 +691,31 @@ table.dataTable thead .sorting:after {
 }
 .selection-div {
 	padding-left: 16px;
+}
+
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+.btn-file input[type=file] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    font-size: 100px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;
+    background: white;
+    cursor: inherit;
+    display: block;
+}
+
+.login-back {
+	background:url(../img/back.png) no-repeat;
+	background-size:100%100%;
 }
 
 /*Form Wizard*/
