--- a/static/css/style.css
+++ b/static/css/style.css
@@ -738,3 +738,8 @@ table.dataTable thead .sorting:after {
 .bs-wizard > .bs-wizard-step:last-child  > .progress {width: 50%;}
 .bs-wizard > .bs-wizard-step.disabled a.bs-wizard-dot{ pointer-events: none; }
 /*END Form Wizard*/
+
+.ztree * {
+	font-size: 14px !important;
+	line-height: 22px !important;
+}
