--- a/code/poa/src/main/resources/templates/common/layout.html
+++ b/code/poa/src/main/resources/templates/common/layout.html
@@ -2,6 +2,11 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta http-equiv="cache-control" content="max-age=0" />
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta http-equiv="expires" content="0" />
+    <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+    <meta http-equiv="pragma" content="no-cache" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="" />
@@ -42,6 +47,10 @@
 
     <!-- common JS -->
     <script th:src="@{/script/common.js}"></script>
+    <!-- resource JS -->
+    <script th:src="@{/i18n/resource_zh.js}"></script>
+    <!-- index JS -->
+    <script th:src="@{/script/index.js}"></script>
 </head>
 <body>
 <div id="wrapper">
