--- a/code/poa/src/main/resources/templates/common/layout.html
+++ b/code/poa/src/main/resources/templates/common/layout.html
@@ -25,6 +25,8 @@
     <link rel="stylesheet" th:href="@{/css/style.css}" />
     <!-- Custom Fonts -->
     <link rel="stylesheet" th:href="@{/css/font-awesome.min.css}" />
+    <!-- zTree -->
+    <link rel="stylesheet" th:href="@{/css/zTree_v3/css/metroStyle/metroStyle.css}" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -40,6 +42,11 @@
     <script th:src="@{/js/metisMenu.min.js}"></script>
     <!-- Custom Theme JavaScript -->
     <script th:src="@{/js/startmin.js}"></script>
+
+    <!-- zTree -->
+    <script th:src="@{/js/zTree_v3/js/jquery.ztree.core.js}"></script>
+    <script th:src="@{/js/zTree_v3/js/jquery.ztree.excheck.js}"></script>
+    <script th:src="@{/js/zTree_v3/js/jquery.ztree.exedit.js}"></script>
 
     <script th:inline="javascript">
         var contextPath = /*[[@{/}]]*/ 'test';
