--- a/code/poa/src/main/resources/templates/dept/page.html
+++ b/code/poa/src/main/resources/templates/dept/page.html
@@ -11,9 +11,9 @@
             </div>
             <div class="panel-body">
                 <div class="table-toolbar">
-                    <button type="button" class="btn btn-default">添加</button>
-                    <button type="button" class="btn btn-default">编辑</button>
-                    <button type="button" class="btn btn-default">删除</button>
+                    <button type="button" id="addDept" class="btn btn-default">添加</button>
+                    <button type="button" id="editDept" class="btn btn-default">编辑</button>
+                    <button type="button" id="deleteDept" class="btn btn-default">删除</button>
                 </div>
                 <ul id="deptTree" class="ztree"></ul>
             </div>
