--- a/code/poa/src/main/resources/templates/user/modalUsersPage.html
+++ b/code/poa/src/main/resources/templates/user/modalUsersPage.html
@@ -28,7 +28,7 @@
                                         <div class="col-md-6">
                                             <div class="form-group">
                                                 <label>姓名</label>
-                                                <input type="text" id="userName" class="form-control" placeholder="支持模糊查询" />
+                                                <input type="text" id="userName" class="form-control" placeholder="支持模糊查询" value="张" />
                                             </div>
                                         </div>
                                     </div>
