--- a/code/poa/src/main/resources/templates/dept/modalPage.html
+++ b/code/poa/src/main/resources/templates/dept/modalPage.html
@@ -32,7 +32,7 @@
                         <label for="deptManagers">负责人</label>
                         <select id="deptManagers" class="form-control" multiple="multiple">
                             <th:block th:each="user : ${managers}">
-                                <option th:value="${user.userId}" th:text="${user.name}"></option>
+                                <option th:value="${user.userId}" th:text="${user.name + '(' + user.policeNumber + ')'}"></option>
                             </th:block>
                         </select>
                     </div>
