--- a/code/poa/src/main/resources/templates/user/modalUsersPage.html
+++ b/code/poa/src/main/resources/templates/user/modalUsersPage.html
@@ -60,50 +60,6 @@
                             </div>
                             <div class="panel-body">
                                 <table class="table table-striped table-bordered table-hover" id="modalUsersTable">
-                                    <!--<thead>
-                                    <tr>
-                                        <th class="selection-col">&nbsp;</th>
-                                        <th>警号</th>
-                                        <th>姓名</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody>
-                                    <tr>
-                                        <td class="selection-col"><input type="checkbox" /></td>
-                                        <td>092384</td>
-                                        <td>张三</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="selection-col"><input type="checkbox" /></td>
-                                        <td>092385</td>
-                                        <td>李四</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="selection-col"><input type="checkbox" /></td>
-                                        <td>092386</td>
-                                        <td>王五</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="selection-col"><input type="checkbox" /></td>
-                                        <td>092387</td>
-                                        <td>朱八</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="selection-col"><input type="checkbox" /></td>
-                                        <td>092388</td>
-                                        <td>赵一</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="selection-col"><input type="checkbox" /></td>
-                                        <td>092389</td>
-                                        <td>钱七</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="selection-col"><input type="checkbox" /></td>
-                                        <td>092390</td>
-                                        <td>孙二</td>
-                                    </tr>
-                                    </tbody>-->
                                 </table>
                             </div>
                         </div>
@@ -112,7 +68,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-                <button type="button" class="btn btn-primary" id="selectUsers">选择</button>
+                <button type="button" class="btn btn-primary" id="selectUsers">保存</button>
             </div>
         </div>
     </div>
