--- a/code/poa/src/main/resources/templates/common/layout.html
+++ b/code/poa/src/main/resources/templates/common/layout.html
@@ -80,7 +80,7 @@
         <ul class="nav navbar-right navbar-top-links">
             <li class="dropdown">
                 <a id="userNameLink" class="dropdown-toggle" data-toggle="dropdown" href="#">
-                    <i class="fa fa-user fa-fw"></i>张三<b class="caret"></b>
+                    <i class="fa fa-user fa-fw"></i><span sec:authentication="principal.name"></span><b class="caret"></b>
                 </a>
                 <ul class="dropdown-menu dropdown-user">
                     <li><a id="updateProfileLink" href="#"><i class="fa fa-user fa-fw"></i>我的账号</a>
