--- a/code/poa/src/main/resources/templates/common/login.html
+++ b/code/poa/src/main/resources/templates/common/login.html
@@ -50,10 +50,16 @@
                             <form role="form" name="form" id="loginForm" th:action="@{/login}" method="POST">
                                 <fieldset>
                                     <div class="form-group">
-                                        <input class="form-control" placeholder="用户名" name="username" type="text" autofocus="autofocus" />
+                                        <div class="input-group">
+                                            <span class="input-group-addon"><i class="fa fa-user fa-fw" title="警号"></i></span>
+                                            <input class="form-control" placeholder="警号" name="username" type="text" autofocus="autofocus" />
+                                        </div>
                                     </div>
                                     <div class="form-group">
-                                        <input class="form-control" placeholder="密码" name="password" type="password" value="" />
+                                        <div class="input-group">
+                                            <span class="input-group-addon"><i class="fa fa-lock fa-fw" title="密码"></i></span>
+                                            <input class="form-control" placeholder="密码" name="password" type="password" value="" />
+                                        </div>
                                     </div>
                                     <!-- Change this to a button or input when using this as a form -->
                                     <a href="#" id="loginBtn" class="btn btn-lg btn-success btn-block">登陆</a>
