--- a/code/poa/src/main/resources/templates/common/layout.html
+++ b/code/poa/src/main/resources/templates/common/layout.html
@@ -137,6 +137,7 @@
     </nav>
     <div id="page-wrapper">
     </div>
+    <form id="logoutForm" type="post" th:action="@{/logout}" style="display:none;"></form>
 </div>
 <script>
     $(function() { $.poa.index.init(); });
