--- a/code/poa/src/main/resources/templates/common/login.html
+++ b/code/poa/src/main/resources/templates/common/login.html
@@ -50,10 +50,10 @@
                             <form role="form" name="form" id="loginForm" th:action="@{/login}" method="POST">
                                 <fieldset>
                                     <div class="form-group">
-                                        <input class="form-control" placeholder="用户名" name="username" type="text" autofocus="autofocus" />
+                                        <input class="form-control" placeholder="请输入用户名" name="username" type="text" autofocus="autofocus" />
                                     </div>
                                     <div class="form-group">
-                                        <input class="form-control" placeholder="密码" name="password" type="password" value="" />
+                                        <input class="form-control" placeholder="请输入密码" name="password" type="password" value="" />
                                     </div>
                                     <!-- Change this to a button or input when using this as a form -->
                                     <a href="#" id="loginBtn" class="btn btn-lg btn-success btn-block">登陆</a>
