--- a/code/poa/src/main/resources/templates/user/modalUsersPage.html
+++ b/code/poa/src/main/resources/templates/user/modalUsersPage.html
@@ -1,11 +1,11 @@
-<div class="modal fade" id="userModal" tabindex="-1" role="dialog" aria-labelledby="userModalLabel" aria-hidden="true">
+<div class="modal fade" id="userSelectModal" tabindex="-1" role="dialog" aria-labelledby="userSelectModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
                     <span class="fa fa-times"></span>
                 </button>
-                <h4 class="modal-title" id="myModalLabel">
+                <h4 class="modal-title" id="userSelectModalLabel">
                     选择人员
                 </h4>
             </div>
