--- a/code/poa/src/main/resources/templates/user/page.html
+++ b/code/poa/src/main/resources/templates/user/page.html
@@ -44,9 +44,9 @@
             </div>
             <div class="panel-body">
                 <div class="table-toolbar">
-                    <button class="btn btn-default"><i class="fa fa-plus"></i>添加</button>
-                    <button class="btn btn-default"><i class="fa fa-pencil"></i>编辑</button>
-                    <button class="btn btn-default"><i class="fa fa-trash"></i>删除</button>
+                    <button class="btn btn-default" id="addUser"><i class="fa fa-plus"></i>添加</button>
+                    <button class="btn btn-default" id="editUser"><i class="fa fa-pencil"></i>编辑</button>
+                    <button class="btn btn-default" id="deleteUser"><i class="fa fa-trash"></i>删除</button>
                     <div class="btn-group">
                         <button class="btn btn-default dropdown-toggle" data-toggle="dropdown">
                             导入<span class="caret"></span>
