--- a/code/poa/src/main/resources/templates/common/layout.html
+++ b/code/poa/src/main/resources/templates/common/layout.html
@@ -54,6 +54,9 @@
     <script th:src="@{/js/bootstrap-table.min.js}"></script>
     <script th:src="@{/js/bootstrap-table-zh-CN.min.js}"></script>
 
+    <!-- Validator JS -->
+    <script th:src="@{/js/validator.min.js}"></script>
+
     <script th:inline="javascript">
         var contextPath = /*[[@{/}]]*/ 'test';
     </script>
