--- a/code/poa/src/main/resources/templates/setting/updateProfilePage.html
+++ b/code/poa/src/main/resources/templates/setting/updateProfilePage.html
@@ -5,19 +5,19 @@
 </div>
 <div class="row">
     <div class="col-lg-12">
-        <form role="form">
+        <form role="form" data-toggle="validator" id="updateProfileForm">
+            <input type="hidden" id="userId" th:value="${user.userId}" />
             <div class="form-group">
                 <label for="policeNumber">警号</label>
-                <input type="text" class="form-control" id="policeNumber" placeholder="请输入警号" th:value="${user.policeNumber}" />
-                <input type="hidden" id="userId" th:value="${user.userId}" />
+                <input type="text" class="form-control" id="policeNumber" placeholder="请输入警号" th:value="${user.policeNumber}" required="required" />
             </div>
             <div class="form-group">
                 <label for="userName">姓名</label>
-                <input type="text" class="form-control" id="userName" placeholder="请输入用户名" th:value="${user.name}" />
+                <input type="text" class="form-control" id="userName" placeholder="请输入用户名" th:value="${user.name}" required="required" />
             </div>
             <div class="form-group">
                 <label for="phone">电话号码</label>
-                <input type="text" class="form-control" id="phone" placeholder="请输入电话号码" th:value="${user.phoneNumber}" />
+                <input type="text" class="form-control" id="phone" placeholder="请输入电话号码" th:value="${user.phoneNumber}" required="required" />
             </div>
             <div class="form-group">
                 <label for="deptName">所属单位</label>
@@ -25,8 +25,14 @@
             </div>
             <div class="form-group">
                 <button type="reset" class="btn btn-default">重置</button>
-                <button type="submit" class="btn btn-primary">保存</button>
+                <button type="button" class="btn btn-primary" id="btnUpdateProfile">保存</button>
             </div>
         </form>
     </div>
 </div>
+<script th:src="@{/script/setting.js}"></script>
+<script>
+    $(function() {
+        $.poa.setting.initUpdateProfile();
+    });
+</script>
