--- a/code/poa/src/main/resources/templates/setting/updateProfilePage.html
+++ b/code/poa/src/main/resources/templates/setting/updateProfilePage.html
@@ -9,22 +9,26 @@
             <input type="hidden" id="userId" th:value="${user.userId}" />
             <div class="form-group">
                 <label for="policeNumber">警号</label>
-                <input type="text" class="form-control" id="policeNumber" placeholder="请输入警号" th:value="${user.policeNumber}" required="required" />
+                <input type="text" class="form-control" id="policeNumber" name="policeNumber"
+                       placeholder="请输入警号" th:value="${user.policeNumber}" maxlength="8" />
             </div>
             <div class="form-group">
                 <label for="userName">姓名</label>
-                <input type="text" class="form-control" id="userName" placeholder="请输入用户名" th:value="${user.name}" required="required" />
+                <input type="text" class="form-control" id="userName" name="userName"
+                       placeholder="请输入用户名" th:value="${user.name}" maxlength="8" />
             </div>
             <div class="form-group">
                 <label for="phone">电话号码</label>
-                <input type="text" class="form-control" id="phone" placeholder="请输入电话号码" th:value="${user.phoneNumber}" required="required" />
+                <input type="text" class="form-control" id="phone" name="phone"
+                       placeholder="请输入电话号码" th:value="${user.phoneNumber}" maxlength="16" />
             </div>
             <div class="form-group">
                 <label for="deptName">所属单位</label>
-                <input type="text" class="form-control" id="deptName" placeholder="请输入所属单位" th:value="${user.deptName}" readonly="readonly" />
+                <input type="text" class="form-control" id="deptName"
+                       placeholder="请输入所属单位" th:value="${user.deptName}" readonly="readonly" />
             </div>
             <div class="form-group">
-                <button type="reset" class="btn btn-default">重置</button>
+                <button type="button" class="btn btn-default" id="btnReset">重置</button>
                 <button type="button" class="btn btn-primary" id="btnUpdateProfile">保存</button>
             </div>
         </form>
